Parameters functions, weather types added.
Temperature, SoilPh, Nutrient, Humidity are functions which are wheather
specific. When wheather  changes, functions also change. They also
depend on SystemTimer elapsed time - you can set one cycle(2 min. for
ex.) - during the cycle functions vary in different way.

--- a/Plants/Planting.csproj
+++ b/Plants/Planting.csproj
@@ -41,39 +41,48 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MessagesCreators\SchedulingMessageCreator.cs" />
     <Compile Include="MessagesCreators\MeasuringMessageCreator.cs" />
-    <Compile Include="MeasuringsProviding\MessengingEventArgs.cs" />
+    <Compile Include="Messenging\MessengingEventArgs.cs" />
     <Compile Include="MeasuringsProviding\ISender.cs" />
-    <Compile Include="MeasuringsProviding\MeasuringMessage.cs" />
-    <Compile Include="Observing\IReciever.cs" />
-    <Compile Include="PlantRequirements\ParameterFunction.cs" />
-    <Compile Include="PlantRequirements\ParameterFunctionTypesEnum.cs" />
-    <Compile Include="PlantRequirements\MeasurableType.cs" />
-    <Compile Include="MeasuringsProviding\MessageType.cs" />
+    <Compile Include="Messenging\MeasuringMessage.cs" />
+    <Compile Include="Observation\IReciever.cs" />
+    <Compile Include="ParametersFunctions\HumidityFunction.cs" />
+    <Compile Include="ParametersFunctions\NutrientFunction.cs" />
+    <Compile Include="ParametersFunctions\ParameterFunction.cs" />
+    <Compile Include="ParametersFunctions\SoilPhFunction.cs" />
+    <Compile Include="ParametersFunctions\TemperatureFunction.cs" />
+    <Compile Include="PlantsRequirements\MeasurableType.cs" />
+    <Compile Include="Messenging\MessageType.cs" />
     <Compile Include="MeasuringsProviding\SensorsMeasuringsProvider.cs" />
-    <Compile Include="Observing\Observer.cs" />
-    <Compile Include="PlantRequirements\MeasurableParameter.cs" />
-    <Compile Include="PlantRequirements\Humidity.cs" />
-    <Compile Include="PlantRequirements\Nutrient.cs" />
-    <Compile Include="PlantRequirements\SoilPh.cs" />
-    <Compile Include="PlantRequirements\Temperature.cs" />
+    <Compile Include="Observation\Observer.cs" />
+    <Compile Include="PlantsRequirements\MeasurableParameter.cs" />
+    <Compile Include="PlantsRequirements\Humidity.cs" />
+    <Compile Include="PlantsRequirements\Nutrient.cs" />
+    <Compile Include="PlantsRequirements\SoilPh.cs" />
+    <Compile Include="PlantsRequirements\Temperature.cs" />
     <Compile Include="Plants\PlantsAreas.cs" />
     <Compile Include="Plants\Plant.cs" />
     <Compile Include="Plants\PlantsArea.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SchedulingSystems\WaterSchedulingSystem.cs" />
-    <Compile Include="SchedulingSystems\Schedule.cs" />
+    <Compile Include="ServiceProvidingSystems\TemperatureSystem.cs" />
+    <Compile Include="ServiceProvidingSystems\NutrientSystem.cs" />
+    <Compile Include="ServiceProvidingSystems\WaterSystem.cs" />
     <Compile Include="Sensors\HumiditySensor.cs" />
     <Compile Include="Sensors\NutrientSensor.cs" />
     <Compile Include="Sensors\TemperatureSensor.cs" />
     <Compile Include="Sensors\SensorsCollection.cs" />
     <Compile Include="Sensors\Sensor.cs" />
     <Compile Include="Sensors\SoilPhSensor.cs" />
-    <Compile Include="Timer\MessageTimer.cs" />
-    <Compile Include="SchedulingSystems\SchedulingSystem.cs" />
-    <Compile Include="SchedulingSystems\SchedulingMessage.cs" />
+    <Compile Include="Timers\SystemTimer.cs" />
+    <Compile Include="ServiceProvidingSystems\ServiceProvidingSystem.cs" />
+    <Compile Include="WeatherTypes\ColdWeatherMeasurer.cs" />
+    <Compile Include="WeatherTypes\HotWeatherMeasurer.cs" />
+    <Compile Include="WeatherTypes\RainyWeatherMeasurer.cs" />
+    <Compile Include="WeatherTypes\WarmWeatherMeasurer.cs" />
+    <Compile Include="WeatherTypes\Weather.cs" />
+    <Compile Include="WeatherTypes\WeatherMeasurer.cs" />
+    <Compile Include="WeatherTypes\WeatherTypesEnum.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
