--- a/Plants/Planting.csproj
+++ b/Plants/Planting.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Plants\PlantsArea.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceSystems\ServiceMessage.cs" />
     <Compile Include="ServiceSystems\ServiceSystem.cs" />
     <Compile Include="ServiceSystems\TemperatureSystem.cs" />
     <Compile Include="ServiceSystems\NutrientSystem.cs" />
