--- a/Plants/PlantingLib.csproj
+++ b/Plants/PlantingLib.csproj
@@ -77,6 +77,7 @@
     <Compile Include="MeasurableParameters\SoilPh.cs" />
     <Compile Include="MeasurableParameters\Temperature.cs" />
     <Compile Include="Plants\PlantNameEnum.cs" />
+    <Compile Include="Plants\PlantsAreaEqualityComparer.cs" />
     <Compile Include="Plants\PlantsAreas.cs" />
     <Compile Include="Plants\Plant.cs" />
     <Compile Include="Plants\PlantsArea.cs" />
