--- a/Plants/packages.config
+++ b/Plants/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="AutoMapper" version="4.0.4" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="PostSharp" version="4.1.26" targetFramework="net45" />
 </packages>
