--- a/Mapper/Mapper.csproj
+++ b/Mapper/Mapper.csproj
@@ -35,6 +35,7 @@
       <HintPath>..\packages\PostSharp.4.1.26\lib\net35-client\PostSharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
