--- a/Plants/PlantingLib.csproj
+++ b/Plants/PlantingLib.csproj
@@ -52,6 +52,7 @@
       <HintPath>..\packages\PostSharp.4.1.26\lib\net35-client\PostSharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -61,6 +62,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MeasurableParameters\CustomParameter.cs" />
@@ -75,7 +77,7 @@
     <Compile Include="ParametersFunctions\ParameterFunction.cs" />
     <Compile Include="ParametersFunctions\SoilPhFunction.cs" />
     <Compile Include="ParametersFunctions\TemperatureFunction.cs" />
-    <Compile Include="MeasurableParameters\MeasurableParametersDictionary.cs" />
+    <Compile Include="MeasurableParameters\AllMeasurableParameters.cs" />
     <Compile Include="Messenging\MessageTypeEnum.cs" />
     <Compile Include="MeasuringsProviding\SensorsMeasuringsProvider.cs" />
     <Compile Include="Observation\Observer.cs" />
@@ -84,13 +86,13 @@
     <Compile Include="MeasurableParameters\Nutrient.cs" />
     <Compile Include="MeasurableParameters\SoilPh.cs" />
     <Compile Include="MeasurableParameters\Temperature.cs" />
-    <Compile Include="Plants\ServiceState\CustomParameterServiceState.cs" />
     <Compile Include="Plants\PlantNameEnum.cs" />
     <Compile Include="Plants\PlantsAreaEqualityComparer.cs" />
     <Compile Include="Plants\PlantsAreas.cs" />
     <Compile Include="Plants\Plant.cs" />
     <Compile Include="Plants\PlantsArea.cs" />
-    <Compile Include="Plants\ServiceState\PlantsAreaServiceState.cs" />
+    <Compile Include="Plants\ServiceStates\PlantsAreaServiceState.cs" />
+    <Compile Include="Plants\ServiceStates\ServiceState.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sensors\CustomSensor.cs" />
