--- a/Plants/PlantingLib.csproj
+++ b/Plants/PlantingLib.csproj
@@ -66,6 +66,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MeasurableParameters\CustomParameter.cs" />
+    <Compile Include="MeasurableParameters\ParameterEnum.cs" />
+    <Compile Include="MeasurableParameters\ParameterInfo.cs" />
     <Compile Include="MessagesCreators\MeasuringMessageCreator.cs" />
     <Compile Include="Messenging\MessengingEventArgs.cs" />
     <Compile Include="MeasuringsProviding\ISender.cs" />
@@ -77,7 +79,7 @@
     <Compile Include="ParametersFunctions\ParameterFunction.cs" />
     <Compile Include="ParametersFunctions\SoilPhFunction.cs" />
     <Compile Include="ParametersFunctions\TemperatureFunction.cs" />
-    <Compile Include="MeasurableParameters\AllMeasurableParameters.cs" />
+    <Compile Include="MeasurableParameters\MeasurableParametersInfo.cs" />
     <Compile Include="Messenging\MessageTypeEnum.cs" />
     <Compile Include="MeasuringsProviding\SensorsMeasuringsProvider.cs" />
     <Compile Include="Observation\Observer.cs" />
@@ -91,6 +93,8 @@
     <Compile Include="Plants\PlantsAreas.cs" />
     <Compile Include="Plants\Plant.cs" />
     <Compile Include="Plants\PlantsArea.cs" />
+    <Compile Include="Plants\ServiceStates\ServiceStateEnum.cs" />
+    <Compile Include="Plants\ServiceStates\ServiceStateEqualityComparer.cs" />
     <Compile Include="Plants\ServiceStates\PlantsAreaServiceState.cs" />
     <Compile Include="Plants\ServiceStates\ServiceState.cs" />
     <Compile Include="Properties\Annotations.cs" />
