--- a/Database/Database.csproj
+++ b/Database/Database.csproj
@@ -52,12 +52,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseStructure\Repository\Abstract\IServiceScheduleMappingRepository.cs" />
+    <Compile Include="DatabaseStructure\Repository\Concrete\ServiceScheduleMappingRepository.cs" />
     <Compile Include="MappingTypes\DbContextConfiguration.cs" />
     <Compile Include="MappingTypes\MeasurableParameterMapping.cs" />
     <Compile Include="MappingTypes\MeasuringMessageMapping.cs" />
     <Compile Include="MappingTypes\PlantMapping.cs" />
     <Compile Include="MappingTypes\PlantsAreaMapping.cs" />
     <Compile Include="MappingTypes\SensorMapping.cs" />
+    <Compile Include="MappingTypes\ServiceScheduleMapping.cs" />
     <Compile Include="PlantingDb.cs" />
     <Compile Include="DatabaseStructure\Repository\Abstract\IMeasurableParameterMappingRepository.cs" />
     <Compile Include="DatabaseStructure\Repository\Abstract\IMeasuringMessageMappingRepository.cs" />
