--- a/PlantsWpf/packages.config
+++ b/PlantsWpf/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Extended.Wpf.Toolkit" version="2.5" targetFramework="net45" />
   <package id="PostSharp" version="4.1.26" targetFramework="net45" />
+  <package id="Toolkit.WPF" version="1.0.5752.30721" targetFramework="net45" />
 </packages>
