--- a/PlantsWpf/PlantsWpf.csproj
+++ b/PlantsWpf/PlantsWpf.csproj
@@ -97,20 +97,20 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ArgsForEvents\PlantsAreaEventArgs.cs" />
-    <Compile Include="ControlsBuilders\DataGridExtensions.cs" />
-    <Compile Include="DataGridObjects\ServiceScheduleView.cs" />
-    <Compile Include="ListViewExtensions\DataMatrix.cs" />
-    <Compile Include="ControlsBuilders\ControlsBuilder.cs" />
-    <Compile Include="DataGridObjects\DataGridSensorView.cs" />
-    <Compile Include="DataGridObjects\DataGridSensorToAddView.cs" />
+    <Compile Include="ControlsBuilders\PlantAreaChartsPanelBuilder.cs" />
+    <Compile Include="ControlsBuilders\IControlsRefresher.cs" />
+    <Compile Include="ControlsBuilders\PlantAreaMenuBuilder.cs" />
+    <Compile Include="ObjectsViews\ChartDescriptor.cs" />
+    <Compile Include="ObjectsViews\DataGridServiceScheduleView.cs" />
+    <Compile Include="ControlsBuilders\FrameworkElementFactoriesBuilder.cs" />
+    <Compile Include="ObjectsViews\DataGridSensorView.cs" />
+    <Compile Include="ObjectsViews\DataGridSensorToAddView.cs" />
     <Compile Include="Converters\StringToBoolConverter.cs" />
-    <Compile Include="ListViewExtensions\GenericEnumerator.cs" />
-    <Compile Include="ListViewExtensions\ListViewExtension.cs" />
-    <Compile Include="ListViewExtensions\MatrixColumn.cs" />
+    <Compile Include="DbDataAccessors\DbMeasuringMessagesRetriever.cs" />
     <Compile Include="PlantsAreaWindow.xaml.cs">
       <DependentUpon>PlantsAreaWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SavingData\DbModifier.cs" />
+    <Compile Include="DbDataAccessors\DbDataModifier.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
