--- a/PlantsWpf/PlantsWpf.csproj
+++ b/PlantsWpf/PlantsWpf.csproj
@@ -51,6 +51,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Controls.DataVisualization.Toolkit">
@@ -109,6 +110,7 @@
     <Compile Include="ControlsBuilders\PlantAreaChartsPanelBuilder.cs" />
     <Compile Include="ControlsBuilders\IControlsRefresher.cs" />
     <Compile Include="ControlsBuilders\PlantAreaMenuBuilder.cs" />
+    <Compile Include="PdfDocuments\PdfDocumentCreator.cs" />
     <Compile Include="ObjectsViews\ChartDescriptor.cs" />
     <Compile Include="ObjectsViews\DataGridServiceScheduleView.cs" />
     <Compile Include="ControlsBuilders\FrameworkElementFactoriesBuilder.cs" />
