--- a/AspNet.Identity.MySQL/AspNet.Identity.MySQL.csproj
+++ b/AspNet.Identity.MySQL/AspNet.Identity.MySQL.csproj
@@ -92,20 +92,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IdentityRole.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="RoleStore.cs" />
-    <Compile Include="IdentityUser.cs" />
-    <Compile Include="UserLoginsTable.cs" />
-    <Compile Include="UserClaimsTable.cs" />
-    <Compile Include="UserStore.cs" />
-    <Compile Include="MySQLDatabase.cs" />
+    <Compile Include="IdentityUserData\IdentityRole.cs" />
+    <Compile Include="Repository\Concrete\IMySqlRepository.cs" />
+    <Compile Include="Repository\Concrete\MySqlMeasurableParameterMappingRepository.cs" />
+    <Compile Include="Repository\Concrete\MySqlRepository.cs" />
+    <Compile Include="WebApiModels\AccountViewModels.cs" />
+    <Compile Include="WebApiModels\IdentityModels.cs" />
+    <Compile Include="WebApiModels\ManageViewModels.cs" />
+    <Compile Include="IdentityUserData\RoleStore.cs" />
+    <Compile Include="IdentityUserData\IdentityUser.cs" />
+    <Compile Include="IdentityUserData\UserLoginsTable.cs" />
+    <Compile Include="IdentityUserData\UserClaimsTable.cs" />
+    <Compile Include="IdentityUserData\UserStore.cs" />
+    <Compile Include="Database\MySQLDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RoleTable.cs" />
-    <Compile Include="UserRoleTable.cs" />
-    <Compile Include="UserTable.cs">
+    <Compile Include="IdentityUserData\RoleTable.cs" />
+    <Compile Include="IdentityUserData\UserRoleTable.cs" />
+    <Compile Include="IdentityUserData\UserTable.cs">
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
@@ -114,7 +117,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="MySQLIdentity.sql" />
+    <None Include="Database\MySQLIdentity.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Database\Database.csproj">
+      <Project>{3A18D4AC-4B79-4FED-B466-87D8E29101D3}</Project>
+      <Name>Database</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Plants\PlantingLib.csproj">
+      <Project>{b3521b62-7b55-452d-9b22-99075e2e4116}</Project>
+      <Name>PlantingLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
